1 section done without button

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salimul Hasan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
-    
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="saliHilight">Salimul's</span> Portfolio</h1>
+            <h3>World-class professional web dev</h3>
+            <p>A passionate web developer with mordern technology. Any Type of projects can be done by discussing. Work as a freelance coder for your high school and college projects. Feel free to contact me any time</p>
+        
+        </div>
+        <div class="half-width">
+            <img src="images/salimulHasanPortfolio1.jpg" alt="">
+        </div>
+    </section>
+ 
+
 </body>
 </html>
