--- a/index.html
+++ b/index.html
@@ -9,18 +9,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-bannar">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="saliHilight">Salimul's</span> Portfolio</h1>
             <h3>World-class professional web dev</h3>
             <p>A passionate web developer with mordern technology. Any Type of projects can be done by discussing. Work as a freelance coder for your high school and college projects. Feel free to contact me any time</p>
+            <a class="button" href="https://www.linkedin.com/in/salimul-hasan/">HIRE ME</a>
         
         </div>
         <div class="half-width">
             <img src="images/salimulHasanPortfolio1.jpg" alt="">
         </div>
     </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/salimulHasanblueback.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button" href="https://www.linkedin.com/in/salimul-hasan/">DOWNLOAD RESUME</a>
+        </div>
+        
+    </section>
+
+    <section class="exprience-area">
+        <h1>Expriences</h1>
+        <div id="full-stack" class="half-width single-exprience">
+            <h1>Full Stack Web Dev</h1>
+            <h3 class="saliHilight">2021 - Present | Pro level Web Dev</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-exprience">
+            <h1>Baby Web Developer</h1>
+            <h3 class="saliHilight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+        </div>
+    </section>
+    <footer>
+        <p>© Jhankar 2021, all rights reserved.</p>
+    </footer>
  
 
 </body>
